css/custom.css
/* ... */
@media (max-width: 992px){
  .onboarding-modal .modal-dialog {
      max-width: initial !important
  }
  .search-sidebar .search-sidebar-scroll{
    height: calc(100vh - 66px) !important
  }
  .support-index .university-content-w .university-info {
    position: absolute;
    top: 10px;
    right: 10px;
    width: 250px;
    -webkit-box-shadow: 0px 20px 60px rgba(4, 123, 248, 0.3);
    box-shadow: 0px 20px 60px rgba(4, 123, 248, 0.3);
    background-color: #fff;
    background-image: none;
    display: none
  }
  .support-index .university-content-w .university-content .show-university-info {
    display: block
  }
  .support-index .university-content-w.force-show-folded-info .university-info {
    display: block
  }
  .support-index .university-content-w .university-content {
    padding-right: 20px;
    padding-left: 20px
  }
  .support-index .university-content-w.folded-info .university-content {
    padding: 10px 20px
  }
  .detail-container {
    margin-right: 0px;
}
.text-slider {
    width: 100%;
}
.right-sidebar-wrap {

    width: 60%;

}
.close-sidebar .right-sidebar-wrap {
    right: -60%;
}
.fix-rightsidebar .search-content {
    margin-left: 0px;
    padding-left: 45px;
}
.right-sidebar-toggle{
  display: block;
}
.fix-rightsidebar .search-sidebar {
    border-right: 1px solid #ecebeb;
}
.search-list-w .search-list .list-controls {
    position: static;
    padding-left: 0px;
    padding-right: 0px;
    background-color: transparent;
    margin-bottom: 0px;
}

}
@media (max-width: 991px)
{

.left-div.right {
    height: 650px;
}
.center-div {
    left: 65px;
    top: 10%;
    width: 70%;
}
.left-div.left {
    height: 650px;
}
.image-section.new {
    padding-right: 0px;
    padding-left: 0px;
}

}
@media (max-width: 767px)
{
  .onboarding-modal .onboarding-slider-w .onboarding-slide:first-child {

    display: block;
}
.onboarding-footer {
    border-radius: 0px 0px 5px 6px;
}
.onboarding-footer strong {
    font-size: 1.3rem;
}
  .search-list-w .pagination-w {
    flex-direction: column;
}
.search-list-w .pagination-w .pagination-info {
    margin-bottom: 20px;
}
  .intro-section .container{
    max-width: 95%
  }
  .university_rank_total {
    flex: auto;
    width: 50%;
}
body.page-internal.has-nav-search {
    padding-top: 100px !important;
}
.left-div.left {
    height: 550px;
    width: 100%;
    height: 550px;
    clear: none;
}
.left-div.right {
    height: 550px;
    width: 100%;
    height: 550px;
    clear: none;
}
.center-div {
    left: 75px;
    top: 15%;
}
.navbar .container{
  max-width: 100%
}
.nav-mobile{
  width: 100%;
padding: 0px 20px;
}
.navbar-collapse{
    background-color: white;
    padding-bottom: 10px;
}
.igraphic-img img{
  width: 100%;
  margin-top: 30px
}
.idraf-img{
  margin-bottom: 40px
}
.team-pane .thumbnail {
    width: calc(50% - 16px);

}
}
@media (max-width: 767px)
{
  .member-image {
    margin-right: 0px;
    text-align: left !important;

}
.member-detail {
    padding-left: 20px;

}
  .search-sidebar .search-sidebar-scroll{
    height: calc(100vh - 100px) !important
  }
.search-filed-box {
    display: block !important;
}
.search-nav {
    flex-direction: row;
    max-width: 100%;
    padding: 0px 20px;
    display: flex !important;
}
.search-nav .select-btn {
    height: 36px;
    min-width: auto;
}
.search-nav .search-field input {
    font-size: 15px;
}
.search-select {
    width: 100%;
    margin-bottom: 10px
}
.search-nav .search-select {
    width: auto;
    margin-bottom: 0px;
}
.search-field {
    width: 100%;
}
}
@media (max-width: 576px)
{
  .intro-column {
      flex-direction: column;
  }
  .intro-column .intro-block {
    border-bottom: 1px solid #dadada;
    padding: 32px 10px;
    border-right: 0px;
}
.intro-column .intro-block:last-child {
    border-bottom: 0px;
}
}

@media (max-width: 480px)
{
  .team-pane .thumbnail {
      width: calc(100% - 16px);

  }
  .banner-text h1 {
    font-size: 1.5rem;
}
.page-header {

    padding-top: 98px;
    padding-bottom: 7px;
}
.gallery-header {
    padding-bottom: 116px;
}
}

